# Weather-App-Project

./: .gitignore  .pre-commit-config.yaml  DEMO_SCRIPT.md  README.md  package-lock.json  vercel.json
.github/workflows/: ci.yml
api/: weather.py
backend/: .env  Makefile  alembic.ini  debug_svc.py  package-lock.json  pyproject.toml  requirements.txt  test.db  test_live_call.py
backend/alembic/: env.py
backend/alembic/versions/: 04a17d4e0656_initial_migration.py  a212aa68c627_merge_heads.py  add_external_id_to_search_locations.py  f29e46885ef2_add_external_id_to_search_locations.py
backend/app/: __init__.py  main.py  requirements.txt
backend/app/api/: export.py  integrations.py  location.py  search_location.py  user_location.py  weather.py  weather_history.py
backend/app/core/: config.py  database.py
backend/app/crud/: weather.py
backend/app/db/: __init__.py  crud.py  database.py  init_db.py
backend/app/models/: __init__.py  export.py  integrations.py  location.py  models.py  search_history.py  search_location.py  user.py  user_location.py  weather.py  weather_history.py
backend/app/schemas/: export.py  search_history.py  search_location.py  user_location.py  weather.py  weather_history.py
backend/app/services/: export_service.py  integration_service.py  location_service.py  user_location.py  weather_service.py
backend/app/utils/: errors.py  helpers.py  logger.py  validators.py
backend/crud/: __init__.py  user_location.py  weather.py
backend/scripts/: check_locations.py  create_test_data.py  create_test_locations.py  create_test_weather_records.py
backend/tests/: test_api.py  test_location.py  test_weather.py
frontend/: .eslintrc.js  package-lock.json  package.json
frontend/src/: App.test.js  App.tsx
frontend/src/components/CurrentWeather/: CurrentWeather.tsx
frontend/src/components/ErrorMessage/: ErrorMessage.tsx
frontend/src/components/ExportButtons/: ExportButtons.tsx
frontend/src/components/FavoriteLocationsList/: FavoriteLocationsList.tsx  index.ts
frontend/src/context/: ThemeContext.tsx  UnitContext.tsx  UserContext.tsx
frontend/src/hooks/: useGeolocation.ts  useWeatherData.ts
frontend/src/pages/: HomePage.tsx  SettingsPage.tsx
frontend/src/styles/: globals.css
my-app/: package-lock.json  package.json
my-app/src/: App.tsx
(+21 files in other folders)
