[tool.poetry]
name = "weather_project"
version = "0.1.0"
description = "Build a full-stack weather application that provides real-time weather information and a 5-day forecast based on user input or current location."
authors = ["Nabin Kim <nabinkim0318@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"
black = "^24.0.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
coverage = "^7.5.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
